--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <h1>Here Is My Favourite Diactator!!!!!:</h1>
+<p>Kim Jong Un Is Friends With Many People, But Some Of His Most Public Relations, Are: Vladamir Putin; Xi Jinping; And Donald J Trump, Our Lord And Saviour (Image To Left)!</p>
 </body>
 </html>
