--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <h1>Here Is My Favourite Diactator!!!!!:</h1>
 <p>Kim Jong Un Is Friends With Many People, But Some Of His Most Public Relations, Are: Vladamir Putin; Xi Jinping; And Donald J Trump, Our Lord And Saviour!</p>
 <img src="donald.jpg" alt="Donald J Trump">
+<p>Xi Jinping Is Better, Tho!....</p>
 </body>
 </html>
